k8s/base/ersatztv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ersatztv
  namespace: media
  labels:
    app.kubernetes.io/name: ersatztv
    app.kubernetes.io/part-of: media-stack
spec:
  selector:
    app: ersatztv
  type: ClusterIP
  ports:
  - name: http
    port: 8409
    targetPort: 8409
